@@ -2,8 +2,11 @@
 Changes in Release 1.1.0
 =============================================
 [SC-37] - Filtering engine results in intersection of policies; union of policies is desired
+[SC-38] - StoredIDStore: invalid character in prepared statement (Oracle only)
 [SC-39] - Add ability to explicitly deny the release attributes
 [SC-40] - Allow macros within configuration resources to be expanded when the resource is loaded
 [SC-42] - Allow for ResourceBackedMetadataProvider as a metadata provider resource type
 [SC-43] - Create a new Resource type that can read information from a Subversion respository
+[SC-44] - StoredIDStore Connection Resource Leak
+[SIDP-200] - attribute-filter.xml AtributeRule ignoreCase logic is backwards
 - Updated to OpenSAML release 2.2
